# advanced-lighting-project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile  compile-debug  configure  run  run-debug
assets/models/: Chandelier_03_1k.mtl  alarm_clock_01_1k.mtl  alarm_clock_01_4k.mtl  brass_vase_01_1k.mtl  sponza.mtl  tea_set_01_1k.mtl
assets/shaders/: brdf.frag  equirectangular.frag  equirectangular.vert  flat.frag  gamma.glsl  glyph.frag  glyph.vert  irradiance.frag  light.glsl  math.glsl  model.frag  model.vert  pbr.frag  pbr.glsl  pbr.vert  pcf.glsl  phong.frag  phong.vert  plain.vert  prefilter.frag  shadow.vert  skybox.frag  skybox.vert
assets/textures/: alarm_clock_01_metal_4k.exr  brass_vase_01_4k.gltf  brass_vase_01_metal_1k.exr  brass_vase_01_nor_gl_1k.exr  studio_country_hall_1k_dark.hdr
assets/textures/studio_country_hall/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
dependencies/: CMakeLists.txt
dependencies/FreeType/: CMakeLists.txt
dependencies/GLEW/: CMakeLists.txt
dependencies/SDL2/: CMakeLists.txt
dependencies/assimp/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/lightmapper/: CMakeLists.txt  lightmapper.c  lightmapper.cpp
dependencies/stb/: CMakeLists.txt
dependencies/xatlas/: CMakeLists.txt
src/: asset_manager.hpp  context.hpp  cube_map.hpp  flight_controller.hpp  font.hpp  framebuffer.hpp  glyph.hpp  gui.hpp  gui_renderer.hpp  handle.hpp  image.hpp  light.hpp  main.cpp  mesh.hpp  model.hpp  model_renderer.hpp  opengl.hpp  passkey.hpp  quad.hpp  render_loop.hpp  renderer.hpp  scene.hpp  shader.hpp  skybox_renderer.hpp  text.hpp  text_renderer.hpp  texture.hpp  utf8.hpp  viewport.hpp
src/application/: application.hpp  asset_manager.hpp  flight_controller.hpp  render_loop.hpp  scene.hpp  world.hpp
src/core/: glsl.hpp  handle.hpp  opengl.hpp
src/render/: brdf_generator.hpp  cubemap_generator.hpp  gui_renderer.hpp  lightmap_generator.hpp  model_renderer.hpp  rendering_pipeline.hpp  shadow_renderer.hpp  skybox_renderer.hpp  text_renderer.hpp
src/resources/: brdf.hpp  camera.hpp  cubemap.hpp  font.hpp  framebuffer.hpp  glyph.hpp  image.hpp  light.hpp  lightmap.hpp  mesh.hpp  model.hpp  scene.hpp  shader.hpp  skybox.hpp  texture.hpp
src/utilities/: calculator.hpp  passkey.hpp  preprocessor.hpp  utf8.hpp
